<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/enter_details"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_address" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_phone_number"
                android:inputType="number"
                android:maxLength="10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/aadhar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_aadhar_number"
                android:inputType="number"
                android:maxLength="12" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/type_spin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_gray_bg"
            android:dropDownSelector="@android:drawable/spinner_dropdown_background" />

        <Spinner
            android:id="@+id/office_spin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_gray_bg"
            android:dropDownSelector="@android:drawable/spinner_dropdown_background" />


        <Spinner
            android:id="@+id/desgnation_spin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_gray_bg"
            android:layout_marginTop="10dp"

            android:dropDownSelector="@android:drawable/spinner_dropdown_background" />


        <Spinner
            android:id="@+id/status_spin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
          />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="Save"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
